# subprocess

./: .clang-format  .clang-tidy  .codespellrc  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  HACKING.md  README.md  build.sh  codecov.yml  conanfile.txt  environment.yaml  subprocess.hpp
.github/workflows/: cmake.yml
cmake/: dev-mode.cmake  install-config.cmake  install-rules.cmake  lint.cmake  variables.cmake
detail/: command.cpp  command.h  command.hpp  exceptions.hpp  file_descriptor.cpp  file_descriptor.hpp  popen.cpp  popen.h  popen.hpp  util.cpp  util.h  util.hpp
include/subprocess/: subprocess.hpp
include/subprocess/detail/: command.hpp  exceptions.hpp  file_descriptor.hpp  popen.hpp  shell_expander.hpp
source/: subprocess.cpp
source/detail/: command.cpp  file_descriptor.cpp  popen.cpp  shell_expander.cpp
test/: CMakeLists.txt
test/source/: subprocess_test.cpp
